--- a/html/register.html
+++ b/html/register.html
@@ -122,7 +122,7 @@
                             id: this.id,
                             name: this.name,
                             password: this.password,
-                            headurl: "https://pic1.zhimg.com/80/v2-9662dad305a49b108d678fdb6aeeaacc_720w.jpg",
+                            headurl: "http://pic.51yuansu.com/pic3/cover/01/69/80/595f67c2aff1e_610.jpg",
                             sign: ""
                         },
                         shopcar: [
