购物车界面待完善

--- a/html/me.html
+++ b/html/me.html
@@ -16,7 +16,7 @@
     <!-- 这里引入外部文件的字体图标样式 -->
     <link rel="stylesheet" href="../css/iconfont.css" />
     <style type="text/css">
-        .header {
+        .navbar {
             height: 3rem;
         }
 
@@ -140,7 +140,7 @@
 
 <body>
     <div id="app">
-        <div class="header">
+        <div class="navbar">
             <van-nav-bar left-text="返回" right-text="退出" left-arrow fixed @click-left="goToBack" @click-right="quit" />
         </div>
         <div class="dialog">
