--- a/html/register.html
+++ b/html/register.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vant@2.11/lib/vant.min.js"></script>
     <!-- 引入axios的JS文件 -->
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../js/axios.min.js"></script>
     <!-- 引入qs的js文件 -->
     <script src="https://cdn.bootcss.com/qs/6.7.0/qs.min.js"></script>
     <!-- 这里引入外部文件的字体图标样式 -->
